[tool.poetry]
name = "neural-networks"
version = "0.1.0"
description = ""
authors = ["Dmitry-Peskov <dv.peskov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
